Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Check the shape of B before after transposing\n",
+    "print(B.shape)\n",
+    "B = B.T\n",
+    "print (B.shape)\n",
+    "B"
    ]
   },
   {
