Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -345,9 +345,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(2, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[35],\n",
+       "        [65]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check the shape of B before after transposing\n",
     "print(B.shape)\n",
