Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -325,6 +327,13 @@
     "A_inv = np.linalg.inv(A)\n",
     "A_inv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
